Facebook share button
Integrating with Opengraph API, also minor change to the preview title
on the Fear post

--- a/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
+++ b/_posts/2015-10-18-leaping-out-on-a-lack-of-tether.textile
@@ -4,7 +4,7 @@ title: Fear is a Good Thing
 tags: humor, death
 comments: true
 published: true
-description: In which we realize Shawn will always be a wet blanket for fun things.
+description: In which we discuss the utility of fear and its applications towards not dying.
 image: fear.png
 ---
 
