--- a/_posts/2016-03-02-poe-money-poe-problems.textile
+++ b/_posts/2016-03-02-poe-money-poe-problems.textile
@@ -64,5 +64,8 @@ I paid my money, hurriedly mentioning that I needed no change, before backing ou
 
 As I pulled away, my rearview mirror framed the entire storefront.  Her figure stood alone in the middle of the large window, vacuously staring out into the rain, surrounded by the fading stock photo smiles.  It was impossible for me to have seen from such distance, but something within my deepest intuition tells me that the corners of her tightly sealed mouth twitched imperceptibly upward in that moment, in the most chilling of smiles.
 
-I continued the short drive home in silence, listening only to the patter of raindrops against my car roof, unable to shake the feeling that that final smile would remain with me for the rest of my life.
+I continued the short drive home in silence, listening only to the patter of raindrops against my car roof, unable to shake the feeling that that final smile would remain with me for the rest of my life...
 
+<br/>
+<br/>
+But my hair looks fantastic now.  9/10; would recommend.
