--- a/_posts/2015-02-28-on-concept-art-and-epcot.textile
+++ b/_posts/2015-02-28-on-concept-art-and-epcot.textile
@@ -106,7 +106,7 @@ I cannot wait to see the results.
 <br/>
 <hr/>
 
-p{font-size:9pt}. If deep within you, this post awakened an insane craving for analyses of the insane minutiae considered in the design and aesthetics of Disney theme parks, then you should definitely check out <a href="http://passport2dreams.blogspot.com/" target="_blank">Passport To Dreams Old and New</a>.  
+p{font-size:9pt}. If deep within you, this post awakened an insane craving for analyses of the minutiae considered in the design and aesthetics of Disney theme parks, then you should definitely check out <a href="http://passport2dreams.blogspot.com/" target="_blank">Passport To Dreams Old and New</a>.  
 
 p{font-size:9pt}. (Really though.  Her blog is the most advanced foray into the academics of design that I read- and it's solely about the Disney properties.)
 
