Enlarging Mcdonald's text
Enlarged

--- a/_posts/2016-07-18-highpointers.textile
+++ b/_posts/2016-07-18-highpointers.textile
@@ -41,7 +41,7 @@ I'd never have spent the night in my hammock by an abandoned New Mexico ski reso
 If I could recommend one thing to everyone reading this, it would be to make the exact same kind of arbitrary travel list.  Not necessarily in state highpoints, or even states as a whole.  If you are still able to make time and travel cheaply in your life, pick one random catalogue of thing that is within your power to search out. Take trips that you otherwise never would have.  Visit the top rated steakhouse in every state.  Watch movies in 50 US drive-ins.  Absolutely anything you find interesting can be applicable.
 <br/>
 
-!http://i.imgur.com/XXio0VU.png("I'm trying to spend a night in jail in every US State!")!
+!http://i.imgur.com/dIeIu5j.png("I'm trying to spend a night in jail in every US State!")!
 
 <br/>
 The point is that it doesn't matter what you pick or even where it is.  The world is overflowing with people and locations you'd never have known existed without stumbling upon them yourself.  It just takes an initial reason for getting out there.
