--- a/_posts/2016-07-18-highpointers.textile
+++ b/_posts/2016-07-18-highpointers.textile
@@ -23,7 +23,7 @@ This was fascinating of course, but why would I be interested?
 
 This month, I took a road trip with a couple of friends to hit 6 state highpoints.  In the final few days of this trip, Pokémon GO(tm) released; this fact resulted in me and Eric ambling about the streets at midnight, in the middle of a thunderstorm, at a Holiday Inn Express in Fort Smith, Arkansas.  We had a blast, but the magic was far less to do with the game itself than the situations it left us in. The Pokémon are ultimately an entirely meaningless digital pile of nothing; an impetus to explore. 
 
-The actual fun arrivess in the moments of searching.  The bits of climbing over a drainage ditch because that Bulbasaur is within 20 meters. Of splitting up and wandering through the empty cineplex parking lot in a grid pattern to try and narrow the range down. Of failing to catch the flipping thing because the servers dropped and realizing that you should probably get back to the hotel because those storm clouds are rolling in _fast_.  
+The actual fun is found in the moments of searching.  The bits of climbing over a drainage ditch because that Bulbasaur is within 20 meters. Of splitting up and wandering through the empty cineplex parking lot in a grid pattern to try and narrow the range down. Of failing to catch the flipping thing because the servers dropped and realizing that you should probably get back to the hotel because those storm clouds are rolling in _fast_.  
 
 We left the hotel objectively to catch Pokémon, but in reality to run around and be idiots for a night.
 
@@ -36,7 +36,7 @@ I'd always planned on seeing every state, but without individual endpoints that 
 
 But the journeys that these points involve are full of slices of the country that I never would have otherwise seen or experienced.
 
-I'd never have spent the night in my hammock by an abandoned New Mexico ski resort, watching the stars and listening to a rushing creek.  I wouldn't have gotten to spend my 23rd birthday seeing the massive organization that is the Kansas City Airport and their fleet of rental cars.  I never would have discovered <a href="http://www.spanglesinc.com/" target="_blank">Spangles</a> and that salt & vinegar fries are a viable side. I wouldn't have gotten to experience the bleak monotony that is driving across Oklahoma, and the 400+ vows from Eric to never return.  I would never have known the living off the grid in <a href="http://earthship.com/" target="_blank">earthships</a> was a thing, or gotten to walk around the inside of a model one. I never would have known about the hectares of oil pumps crossing eastern Colorado, or seen the wind turbine sentinels in stormy Nebraska, blades dipping down from the clouds like shark fins. 
+I'd never have spent the night in my hammock by an abandoned New Mexico ski resort, watching the stars and listening to a rushing creek.  I wouldn't have gotten to spend my 23rd birthday seeing the massive organization that is the Kansas City Airport and their fleet of rental cars.  I never would have discovered <a href="http://www.spanglesinc.com/" target="_blank">Spangles</a> and that salt & vinegar fries are a viable side. I wouldn't have gotten to experience the bleak monotony that is driving across Oklahoma, and the 400+ vows from Eric to never return.  I would never have known that living off the grid in <a href="http://earthship.com/" target="_blank">earthships</a> was a thing, or gotten to walk around the inside of a model one. I never would have known about the hectares of oil pumps dotting eastern Colorado, or seen the wind turbine sentinels in stormy Nebraska, blades dipping down from the clouds like shark fins. 
 
 If I could recommend one thing to everyone reading this, it would be to make the exact same kind of arbitrary travel list.  Not necessarily in state highpoints, or even states as a whole.  If you are still able to make time and travel cheaply in your life, pick one random catalogue of thing that is within your power to search out. Take trips that you otherwise never would have.  Visit the top rated steakhouse in every state.  Watch movies in 50 US drive-ins.  Absolutely anything you find interesting can be applicable.
 <br/>
