--- a/_posts/2016-10-08-butterfly.textile
+++ b/_posts/2016-10-08-butterfly.textile
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Fenceposts
+title: Fenceposts & Butterflies
 tags: humor, work, advice
 comments: true
 published: true
-description: In which Shawn explains how to smother things
+description: In which we discuss time and bottling team culture
 image: butterfly.png
 ---
 
@@ -33,10 +33,10 @@ This gathered complaints from passers-by.  None serious, all joking and typicall
 
 At first we placated them, taking time out of the schedule to fill in a half-representative doodle of the day. Usually it would just be what we’d eaten for lunch or such.  Sometimes we’d have to look at our Slack history from that date to remember anything of significance to draw.  At one point in frustration we even meta-filled a week of blank slots with a stick figure pointing at the calendar, concernedly questioning why it was left blank.
 
-Higher-up figures in the company dropped by often, encouraging continued use of the board as a method of team building.  Comments were made about attempting to export the exercise into our other offices.  Ideas of a calendar webcam floated about. Blank days were frowned upon - jokingly, and yet with the slightest tinge of seriousness.  There was an unstated pressure to always have a new scene on the board each morning.  And our enthusiasm suffocated.
+Higher-up figures in the company dropped by often, encouraging continued use of the board as a method of team building.  Comments were made about attempting to export the exercise into our other offices.  Ideas of a calendar web-cam floated about. Blank days were frowned upon - jokingly, and yet with the slightest tinge of seriousness.  There was an unstated pressure to always have a new scene on the board each morning.  And our enthusiasm suffocated.
 
 With every passing remark, each entirely innocent comment of _“Looks like you’ve got some days to fill in!”_, the odds of us drawing anything in those blank white boxes plummeted. As expectations and discussion rose of how to spread that drive to the rest of the employee base, the creative motivation of our team slowly and quietly suffocated.  On April 19th, the board saw its last doodle.
 
-The entire thing is largely forgotten now. We’ve found other, less public, outlets to have fun.  The whiteboard sits unnoticed on the floor of our office, wedged between the backs of two desks, hidden from sight of all but my corner of the room, faded illustrations from the final 4 month span still visible.
+The entire thing is largely forgotten now. We’ve found other, less public, outlets to have fun.  The whiteboard sits unnoticed on the floor of our office, wedged between the backs of two desks, hidden from sight of all but my corner of the room, faded illustrations from the final 4 month span still visible.  Occasionally I will zone out on a phone call and notice one of the panels and laugh.  A stick figure trying to talk on a cell phone while standing in a waterfall, the coffee maker rising from the grave on the third day,  General Tso -the famed military chicken - standing in front of saluting troops.  Every remaining panel lets me remember exactly what happened that day.  It keeps the flow of time in perspective.  When I actually focus on February with that calendar in front of me, It's obvious that we lived a lot of life in one month.  And in stark contrast, April 20th through the current date is practically nonexistent.  There are key moments my brain still remembers, obviously, but most of them are external to my time at work. That range exists only through my own significant events, no longer as a group.  The day that spontaneity finally succumbed, the fenceposts fell too.
 
 !http://imgur.com/e3zuOtf.png(Pin this image)!
